--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: crop-image-api
+    name: crop-detector-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PORT
-        value: 5000
+        value: 10000
