--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: crop-detector-api
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: PORT
-        value: 10000
+    name: crop-disease-api
+    env: python
+    plan: free
+    buildCommand: |
+      pip install -r requirements.txt
+    startCommand: |
+      uvicorn main:app --host 0.0.0.0 --port 10000 --reload
+    healthCheckPath: /health
+    autoDeploy: true
